Correcting position mobile mode foot logo bar

--- a/src/components/BottomLogoBar/BottomLogoBar.module.css
+++ b/src/components/BottomLogoBar/BottomLogoBar.module.css
@@ -1,6 +1,6 @@
 .bottomLogoBar {
   width: 100%;
-  height: 3rem;
+  height: 13rem;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -8,13 +8,12 @@
 }
 
 .bottomLogoBarMobile {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 3rem;
-  margin: 0 auto;
+  height: 13rem;
+  margin: 0 auto 8rem auto;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  top: 170%;
   background-color: transparent;
 }
